--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "solana-event-indexer",
   "version": "1.0.0",
   "description": "Solana Event Indexer Service",
-  "main": "src/index.ts",
+  "main": "src/app.ts",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node src/index.ts"
+    "start": "ts-node src/app.ts",
+    "dev": "ts-node src/app.ts"
   },
-  "keywords": ["solana", "indexer", "blockchain"],
+  "keywords": [
+    "solana",
+    "indexer",
+    "blockchain"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -19,7 +23,10 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.87.6",
+    "@types/lodash": "^4.17.23",
     "dotenv": "^16.0.3",
-    "mongoose": "^9.1.3"
+    "lodash": "^4.17.21",
+    "mongoose": "^9.1.3",
+    "winston": "^3.19.0"
   }
 }
